--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -95,6 +95,13 @@ header {
     color: #2B2730;
 }
 
+.text-appearance-normal {
+    font-size: 1.6rem;
+    line-height: 1;
+    letter-spacing: 1.8px;
+    color: #2B2730;
+}
+
 .section-intro {
     display: flex;
     flex-direction: row;
@@ -222,12 +229,13 @@ header {
 }
 
 .img-phone {
-    width: 600px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .img-phone img {
-    width: 600px;
+    width: 300px;
 }
 
 .container-total-languages {
