--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,6 +2,8 @@
     font-family: 'Rubik', sans-serif;
     --purple: #6064e3;
 
+    --text-color: #2B2730;
+
     --beige: #fad2b1;
     --pinky: #ff9b76;
     --orangey: #e07258;
@@ -28,7 +30,7 @@ header {
 }
 
 .header-title {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: bold;
     margin-left: 5px;
 }
@@ -50,9 +52,8 @@ header {
     font-weight: 900;
     line-height: 1;
     letter-spacing: 1.8px;
-    color: #2B2730;
+    color: var(--text-color);
 }
-
 
 .button {
     background-color: transparent;
@@ -79,7 +80,7 @@ header {
 ************************************************************
 ************************************************************/
 .section-header { height: 100px; }
-.section-intro { height: 500px; }
+.section-intro { height: 400px; }
 
 /************************************************************
 ************************************************************
@@ -130,10 +131,15 @@ header {
 }
 
 .section-intro-caption {
+    font-size: 3.75rem;
+    font-weight: 900;
+    line-height: 1;
+    letter-spacing: 1.8px;
+    color: #2B2730;
 }
 
 .section-intro-description {
-    color: var(--burgundy);
+    color: var(--burgundy-light);
     font-size: 2rem;
     letter-spacing: 1.5px;
 }
@@ -162,7 +168,7 @@ header {
     border-radius: 5px;
     width: 70%;
     margin-right: 10px;
-    padding: 10px;
+    padding: 9px;
 }
 
 .subscribe-input-container:focus {
@@ -234,6 +240,7 @@ header {
 .background-box-svg {
     position: absolute;
     top: 0;
+    left: 150px;
     z-index: -1;
     color: #cecece;
 }
@@ -241,10 +248,10 @@ header {
 .background-box {
     position: absolute;
     top: 150px;
-    left: 50px;
-    background-color: #9575DE;
+    left: 150px;
+    background-color: var(--pinky);
     height: 300px;
-    width: 600px;
+    width: 500px;
     border-radius: 10px;
     z-index: -2;
 }
@@ -265,11 +272,18 @@ header {
     padding: 50px 10px;
 }
 
+.total-languages-container {
+    padding: 3em;
+    background-color: #fad2b1; 
+    /*var(--pinky);*/
+}
+
 .total-languages {
     font-size: 4rem;
     font-weight: 500;
     letter-spacing: -0.75px;
-    color: #FFF;
+    color: var(--text-color);
+    text-align: center;
 }
 
 .total-languages-subtext {
@@ -277,7 +291,7 @@ header {
     text-align: center;
     font-weight: 500;
     letter-spacing: -0.75px;
-    color: #FFF;
+    color: var(--text-color);
 }
 
 .language-list {
@@ -328,6 +342,41 @@ header {
     height: 300px;
 }
 
+.stories-level-container {
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.stories-level {
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.stories-level-caption {
+    font-size: 3.75rem;
+    font-weight: 900;
+    line-height: 1;
+    letter-spacing: 1.8px;
+    color: var(--text-color);
+}
+
+.stories-level-benefits {
+    font-size: 2rem;
+    line-height: 1;
+    letter-spacing: 1.8px;
+    color: var(--text-color);
+}
+
+.stories-level-benefits ul li {
+    list-style: circle;
+}
+
+.stories-level-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .background-box {
