--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -410,6 +410,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: var(--text-color);
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
